--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-credentials-gcp.json
-project-id.txt
-.terraform.lock.hcl
-terraform.tfstate
-terraform.tfstate.backup
-.terraform
+archivos/
+*terraform*
